--- a/Zap Ar - copia/Codigo ZapAr/index.html
+++ b/Zap Ar - copia/Codigo ZapAr/index.html
@@ -18,6 +18,8 @@
         <script src="https://kit.fontawesome.com/0671e501c7.js" crossorigin="anonymous"></script>
     <!-- insertar paginas -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
     <!--  seo -->
     <meta name="description" content="Somos una empresa familiar, nos encargamos de la fabricación y venta minorista y mayorista de zapatillas. ¡Ingresa para enterarte de las mejores ofertas y precios del mercado!">
     <meta name="keywords" content="zapatillas, ofertas, pyme, descuentos, envíos, variedad, argentina">
@@ -229,4 +231,6 @@
         </nav>
     </footer>
 </body>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
