--- a/Zap Ar - copia/Codigo ZapAr/pages/iniciar_sesion.html
+++ b/Zap Ar - copia/Codigo ZapAr/pages/iniciar_sesion.html
@@ -19,6 +19,8 @@
     <!-- insertar paginas -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/estilo.css">
+     <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
      <!--  seo -->
     <meta name="description" content="Ingresa para poder acceder a increíbles ofertas y beneficios.">
     <meta name="keywords" content="zapatillas, ofertas, pyme, descuentos, compras, beneficios, exclusividad">
@@ -67,17 +69,17 @@
 
           <form>
               <div class="form_label_flex">
-                  <label class="form_label_texto doble_linea" for="usuario">Nombre de usuario:</label>
-                  <Input type="text" class="input_style sombra" placeholder="Ingrese su usuario" id="usuario"
+                  <label class="form_label_texto doble_linea " for="usuario">Nombre de usuario:</label>
+                  <Input type="text" class="input_style sombra form-control" placeholder="Ingrese su usuario" id="usuario"
                       name="usuario" required>
               </div>
               <div class="form_label_flex">
                   <label class="form_label_texto" for="contraseña">Contraseña:</label>
-                  <Input type="password" class="input_style sombra" placeholder="Ingrese su contraseña"
+                  <Input type="password" class="input_style sombra form-control" placeholder="Ingrese su contraseña"
                       id="contraseña" name="contraseña" required>
               </div>
               <div class="acepta_style">
-                  <input class="sombra" type="checkbox" name="acepta" value="1" />
+                  <input class="sombra" type="checkbox" name="acepta" value="1" checked />
                   <label for="acepta">Guardar contraseña</label>
               </div>
               <div class="btn_formulario_flex">
@@ -101,7 +103,8 @@
                       src="../Imagenes/wpp_negro.jpg" alt="logo de whats app"></a></li>
       </nav>
   </footer>
-
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
 
