--- a/Zap Ar - copia/Codigo ZapAr/pages/consultas.html
+++ b/Zap Ar - copia/Codigo ZapAr/pages/consultas.html
@@ -19,6 +19,8 @@
     <!-- insertar paginas -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/estilo.css">
+     <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
     <!--  seo -->
     <meta name="description" content="Cualquiera sea tu duda o sugerencia estamos acá para responderte y brindarte asesoramiento en lo que requieras, de lunes a lunes desde las 7 am hasta las 20hs">
     <meta name="keywords" content="zapatillas, confianza, transparencia, asesoramiento, rapidez, consultas, preguntas">
@@ -76,23 +78,23 @@
               <div class="form_label_flex">
                   <label class="form_label_texto"
                       for="nombre_apellido">Nombre y apellido:</label>
-                  <Input type="text" class="input_style sombra" placeholder="Ingrese su nombre y apellido"
+                  <Input type="text" class="input_style sombra form-control" placeholder="Ingrese su nombre y apellido"
                       id="nombre_apellido" name="nombre_apellido" required>
               </div>
               <div class="form_label_flex">
                   <label class="form_label_texto"
                       for="telefono">Telefono:</label>
-                  <Input type="tel" class="input_style sombra" placeholder="Ingrese su telefono" id="telefono"
+                  <Input type="tel" class="input_style sombra form-control" placeholder="Ingrese su telefono" id="telefono"
                       name="telefono" required>
               </div>
               <div class="form_label_flex">
                   <label class="form_label_texto"
                       for="e-mail">E-mail:</label>
-                  <Input type="email" class="input_style sombra" placeholder="Ingrese su e-mail" id="e-mail"
+                  <Input type="email" class="input_style sombra form-control" placeholder="Ingrese su e-mail" id="e-mail"
                       name="e-mail" required>
               </div>
               <div class="textarea">
-                <textarea name="consulta" class="sombra form_label_texto"
+                <textarea name="consulta" class="sombra form-control"
                     placeholder="Escribinos aqui tu duda o sugerencia"></textarea>
               </div>
               <div class="btn_formulario_flex">
@@ -116,5 +118,7 @@
       </nav>
   </footer>
 
+      <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
