--- a/Zap Ar - copia/Codigo ZapAr/pages/vendedores_mayoristas.html
+++ b/Zap Ar - copia/Codigo ZapAr/pages/vendedores_mayoristas.html
@@ -19,6 +19,8 @@
     <!-- insertar paginas -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/estilo.css">
+     <!-- CSS only -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">    
    <!--  seo -->
     <meta name="description" content="Tenemos los mejores precios mayoristas, no dudes en registrarte ¡no vas a parar de vender! Te aseguramos rapidez, confiabilidad y sobretodo, calidad.">
     <meta name="keywords" content="zapatillas, ofertas, mayoristas, ventas, confianza, transparencia ,descuentos, compras">
@@ -77,15 +79,15 @@
             <form class="form_datos_flex_padre">
                 <div class="form_label_flex">
                     <label for="nombre_apellido" class="form_label_texto">Nombre y apellido:</label>
-                    <Input type="text"  class="input_style sombra" placeholder="Ingrese su nombre y apellido" id="nombre_apellido" required>
+                    <Input type="text"  class="input_style sombra form-control" placeholder="Ingrese su nombre y apellido" id="nombre_apellido" required>
                 </div>
                 <div class="form_label_flex">
                     <label for="telefono" class="form_label_texto">Telefono:</label>
-                    <Input type="tel" class="input_style sombra" placeholder="Ingrese su telefono" id="telefono" required>
+                    <Input type="tel" class="input_style sombra form-control" placeholder="Ingrese su telefono" id="telefono" required>
                 </div>
                 <div class="form_label_flex">
                     <label for="e-mail" class="form_label_texto">E-mail:</label>
-                    <Input type="email" class="input_style sombra" placeholder="Ingrese su e-mail" id="e-mail" required>
+                    <Input type="email" class="input_style sombra form-control" placeholder="Ingrese su e-mail" id="e-mail" required>
                 </div>
                 <div class="btn_formulario_flex">
                     <button class="sombra btn_formulario_style label_formulario_botones">Enviar</button>
@@ -108,4 +110,6 @@
     </footer>
 </body>
 
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </html>
